derive/tests/snapshots/referenced_row_methods/Stage/create_stage.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**Create a row in the `stage` table.

# Foreign keys

Fails with `ReferenceIntegrityViolation` unless each column references a row:

- `next_stage_id`: a row of the `stage` table (`self`), or `0`*/
    pub fn create_stage<'a>(
        &'a self,
        stage: CreateStage,
    ) -> Result<Stage, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let next_stage_id = stage.next_stage_id.value();
        let stage = Stage { id, next_stage_id };
        let mut the_same_or_another_stage: Option<Stage> = None;
        if next_stage_id.ne(&0) {
            match self.get_stage_by_id(stage.get_next_stage_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "stage".into(),
                            create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Create,
                            column_names_and_row_values: format!(
                                "{{ next_stage_id : {} }}", stage.get_next_stage_id()
                                .value()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        let unique_column_values = (stage.id.clone(), stage.next_stage_id.clone());
        match self.db().stage().try_insert(stage) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "stage".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {}, next_stage_id : {} }}", unique_column_values.0,
                                unique_column_values.1
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "stage".into(),
                        })
                    }
                }
            }
        }
    }
}
