derive/tests/snapshots/referenced_row_methods/Stage/get_all_stages.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `stage` table.
    pub fn get_all_stages<'a>(&'a self) -> impl Iterator<Item = Stage> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().stage().iter()
    }
}
